[gd_scene load_steps=8 format=3 uid="uid://dg2lijml07p5x"]

[ext_resource type="Script" uid="uid://bicrljjaufaa5" path="res://code/components/wire_straight.gd" id="1_wxgvv"]
[ext_resource type="PackedScene" uid="uid://c80fsqccc2hnu" path="res://scenes/connection.tscn" id="2_4dt5m"]
[ext_resource type="PackedScene" uid="uid://djd85005dvf4k" path="res://scenes/components/signal_connection.tscn" id="3_wxgvv"]

[sub_resource type="CylinderMesh" id="CylinderMesh_4dt5m"]
top_radius = 0.05
bottom_radius = 0.05
height = 1.0
radial_segments = 8
rings = 1

[sub_resource type="BoxShape3D" id="BoxShape3D_uamj1"]
size = Vector3(1, 0.1, 0.1)

[sub_resource type="BoxShape3D" id="BoxShape3D_wxgvv"]
size = Vector3(0.6, 0.1, 0.1)

[sub_resource type="BoxShape3D" id="BoxShape3D_4dt5m"]
size = Vector3(0.6, 0.1, 0.1)

[node name="WireStraight" type="Node3D"]
script = ExtResource("1_wxgvv")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0.25, 0.25, 0.25)
mesh = SubResource("CylinderMesh_4dt5m")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, 0.25, 0.25)
shape = SubResource("BoxShape3D_uamj1")

[node name="CenterOfMass" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, 0.25, 0.25)

[node name="Connection" parent="." instance=ExtResource("2_4dt5m")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, 0.25, 0.25)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Connection"]
shape = SubResource("BoxShape3D_wxgvv")

[node name="SignalConnection" parent="." instance=ExtResource("3_wxgvv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, 0.25, 0.25)

[node name="CollisionShape3D2" type="CollisionShape3D" parent="SignalConnection"]
shape = SubResource("BoxShape3D_4dt5m")
